qa/qa-geweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ge-web-deployment-qa
  namespace: ge-qa
  labels:
    app: ge-web
    env: qa
spec:
  replicas: 1
  minReadySeconds: 7
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: ge-web
      env: qa
  template:
    metadata:
      labels:
        app: ge-web
        env: qa
    spec:
      nodeSelector:
        agentpool: qaserver
      tolerations:
        - key: "sku"
          operator: "Equal"
          value: "qatest"
          effect: "NoSchedule"
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: ge-web-container
          image: ghcr.io/rajp1011/pfhbe/geweb:v10.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            periodSeconds: 10
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
          volumeMounts:
            - name: ge-service-config-volume
              mountPath: /app/Internal
              subPath: GE/GEWeb/Internal
              readOnly: true
            - name: ge-service-config-volume
              mountPath: /mnt
              readOnly: false
      volumes:
        - name: ge-service-config-volume
          persistentVolumeClaim:
            claimName: ge-pvc-qa
