qa/qa-ge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ge-main-ingress-qa
  namespace: ge-qa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /qa/shard1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ge-service-1-qa
                port:
                  number: 8080

          - path: /qa/shard2(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ge-service-2-qa
                port:
                  number: 8080

          - path: /qa/shard3(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ge-service-3-qa
                port:
                  number: 8080

          - path: /qa/shard4(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ge-service-4-qa
                port:
                  number: 8080

          - path: /qa/shard5(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ge-service-5-qa
                port:
                  number: 8080

          - path: /qa(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ge-web-qa
                port:
                  number: 80
